【ch05】 5.6.7 tomcat的虚拟机配置